# comp-scraping

./: .gitignore  README.md  brazil_software_engineer_salaries_2024-09-10-22-56-31.csv  pyproject.toml  run_tests.py  scraper.py
.github/workflows/: python-tests.yml  tests.yml
comp_scraping/: analyze_data.py  data_analysis.ipynb  notebook.ipynb  notebook_runner.py  scraper.py
tests/: test_scraper.py
